--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rdma_Internal</title>
+  <title>Rdma Internal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,7 +11,7 @@
   <!-- Main font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900" rel="stylesheet">
   <link rel="stylesheet"  href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+  
 </head>
 <body>
   <app-root></app-root>
